--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}shop/js/base.configuration.js"></script>
 {% block js %}{% endblock %}
     <!--[if IE 6]>
-    <script type="text/javascript" src="/js/DD_belatedPNG.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/DD_belatedPNG.js"></script>
     <script type="text/javascript">
         DD_belatedPNG.fix('img, .logo');
     </script>
