--- a/office/templates/office.htm
+++ b/office/templates/office.htm
@@ -6,7 +6,7 @@
 {% block content %}
       <table cellpadding="3" cellspacing="1" width="100%">
         <tr>
-          <th colspan="4" align="left">订单统计信息</th>
+          <th colspan="4" align="left"><h3>订单统计信息</h3></th>
         </tr>
         <tr>
           <td width="15%"><a href="/office/order/0/">未确认订单:</a></td>
@@ -23,7 +23,7 @@
       </table>
       <table cellpadding="3" cellspacing="1" width="100%">
         <tr>
-          <th colspan="4" align="left">物流统计信息</th>
+          <th colspan="4" align="left"><h3>物流统计信息</h3></th>
         </tr>
         <tr>
           <td width="15%"><a href="/office/order/110/">待发货订单:</a></td>
@@ -40,7 +40,7 @@
       </table>
       <table cellpadding="3" cellspacing="1" width="100%">
         <tr>
-          <th colspan="4" align="left">工厂统计信息</th>
+          <th colspan="4" align="left"><h3>工厂统计信息</h3></th>
         </tr>
         <tr>
           <td width="15%"><a href="/office/order/110/">生产请求:</a></td>
