修正 收货时间模型

--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -64,7 +64,7 @@
             <h3>小提示：</h3>
             <p>蓝圈内为免费配送范围，超出免费配送范围须加收10元，收费配送范围为红圈以内蓝圈以外。</p>
             <p><br /></p>
-            <p><img src="/images/delivery_areas.jpg" /></p>
+            <p><img src="{{ STATIC_URL }}images/delivery_areas.jpg" /></p>
             <p><br /></p>
             <p>蛋糕规格及免费配送餐具：</p>
             <ul class="specLi">
