--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -120,7 +120,7 @@
             <li><a href="/slide/">首页幻灯片</a></li>
             <li><a href="/payment/">支付方式</a></li>
             <li><a href="/area/">配送区域</a></li>
-            <li><a href="/signtime/time/">收货时间</a></li>
+            <li><a href="/signtime/">收货时间</a></li>
             <li><a href="/logistics/time/">物流时间</a></li>
             <li><a href="/filecheck/">文件校验</a></li>
           </ul>
