--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -1,7 +1,7 @@
 {% extends "shop.base.htm" %}
 
 {% block js %}
-    <script type="text/javascript" src="/js/shop/tag.configuration.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}tag/js/tag.configuration.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -25,7 +25,7 @@
                     </div>
                     <div class="vote">
                         <a class="btnLike" href="/ajax/like/8754/">喜欢</a>
-                        <a class="btnReplay" href="/ajax/itemattr/1{{ i.itemName.id }}/">购买(<span>0</span>)</a>
+                        <a class="btnReplay" href="/ajax/itemspec/1{{ i.itemName.id }}/">购买(<span>0</span>)</a>
                     </div>
                 </div>
             </li>
