--- a/cart/templates/checkout.htm
+++ b/cart/templates/checkout.htm
@@ -7,12 +7,8 @@
              <h3>订单状态</h3>
             <table width="100%" class="mBottom10">
                 <tr>
-                    <td width="100px">交易类型：</td>
-                    <td>普通销售订单</td>
-                </tr>
-                <tr>
-                    <td>付款方式：</td>
-                    <td><strong>支付宝</strong></td>
+                    <td width="100px">付款方式：</td>
+                    <td><strong>{{ pay.name }}</strong></td>
                 </tr>
                 <tr>
                     <td>配送方式：</td>
@@ -28,13 +24,25 @@
                     <th>数量</th>
                     <th>小计</th>
                 </tr>
-                <tr align="center" class="bLine">
-                    <td>香浓巧克力</td>
-                    <td>2.5磅：约18×18(cm)</td>
-                    <td>￥284.00 元<font color="red">( 折 )</font></td>
-                    <td>1</td>
-                    <td>￥284.00 元</td>
-                </tr>
+{% if cart.itemBuy %}
+{% for i in cart.itemBuy %}
+                    <tr align="center">
+                        <td>{{ i.item.itemName.itemName }}</td>
+                        <td>{{ i.item.spec }}</td>
+                        <td>￥{{ i.amount|floatformat:2 }} 元</td>
+                        <td>{{ i.num }}</td>
+                        <td>￥<span class="st{{ i.v }}">{{ i.subtotal|floatformat:2 }}</span> 元</td>
+                    </tr>
+{% endfor %}
+                    <tr class="bLine">
+                        <td align="right" colspan="5"><span class="fBold font18">商品总价: ￥<span class="total">{{ cart.countFee|floatformat:2 }}</span> 元 和 0 K金</span></td>
+                        <td></td>
+                    </tr>
+{% else %}
+                    <tr class="bLine">
+                        <td align="center" colspan="6">您的购物车是空的</td>
+                    </tr>
+{% endif %}
             </table>
             <h3>赠送</h3>
             <table width="100%" class="mBottom10">
@@ -60,23 +68,23 @@
             <table width="100%" class="mBottom10">
                 <tr>
                     <td width="100px">收货人姓名：</td>
-                    <td>韦超</td>
+                    <td>{{ request.session.c.consignee }}</td>
                 </tr>
                 <tr>
                     <td>详细地址：</td>
-                    <td>[ 南宁&nbsp;&nbsp;邕宁区 ]&nbsp;&nbsp;南宁市桂雅路1号联盟新城一号楼119室</td>
+                    <td>[ {{ area.sub.name }} - {{ area.name }} ]&nbsp;&nbsp;{{ request.session.c.address }}</td>
                 </tr>
                 <tr>
                     <td>电话：</td>
-                    <td>15177788120</td>
+                    <td>{{ request.session.c.tel }}</td>
                 </tr>
                 <tr>
                     <td>最佳收货时间：</td>
-                    <td>2012-11-17&nbsp;&nbsp;13:00 ~ 14:00</td>
+                    <td>{{ request.session.c.date }}&nbsp;&nbsp;{{ time.start|time:"H:i" }} - {{ time.end|time:"H:i" }}</td>
                 </tr>
                 <tr>
                     <td>备注：</td>
-                    <td>饿死了</td>
+                    <td>{{ request.session.c.note }}</td>
                 </tr>
             </table>
             <center>
