--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -41,29 +41,29 @@
                     </form>
                 </li>
                 <li class="messageBox">
-                    <a id="lnkTopMessage" href="/account/order" class="newMessage" title="新消息"><span id="spanTopMessage" title="新消息">{% if request.user.allmsgCount %}{{request.user.allmsgCount}}{% else %}0{% endif %}</span></a>
+                    <a id="lnkTopMessage" href="/account/order" class="newMessage" title="新消息"><span id="spanTopMessage" title="新消息">{% if user.allmsgCount %}{{user.allmsgCount}}{% else %}0{% endif %}</span></a>
                     <div id="pnlTopMessage" class="messagePop" style="display:none;">
                         <h3>新消息</h3>
                         <ul>
-                            <li><a href="/account/order/">新订单（ {% if request.user.newOrderCount %}{{request.user.newOrderCount}}{% else %}0{% endif %} ）</a></li>
-                            <li><a href="/account/messages/">新留言（ {% if request.user.newMsgCount %}{{request.user.newMsgCount}}{% else %}0{% endif %} ）</a></li>
+                            <li><a href="/account/order/">新订单（ {% if user.newOrderCount %}{{user.newOrderCount}}{% else %}0{% endif %} ）</a></li>
+                            <li><a href="/account/messages/">新留言（ {% if user.newMsgCount %}{{user.newMsgCount}}{% else %}0{% endif %} ）</a></li>
                         </ul>
                         <a class="confirm" href="javascript:void(0)" onclick="clearMessageData();return false;">我知道了</a>
                     </div>
                 </li>
                 <li><a href="/cart/">购物车</a></li>
-{% if request.user.is_authenticated %}
+{% if user.is_authenticated %}
                 <li class="messageBox">
                     <a id="lnkTopSetting" class="pic">设置<b></b></a>
                     <div id="pnlTopProfile" class="messagePop" style="display: none;">
-                        <h3>{{ request.user}}</h3>
+                        <h3>{{ user}}</h3>
                         <div class="editBox">
                             <ul>
-                                <li class="email"><em>{{ request.user.email}}</em></li>
+                                <li class="email"><em>{{ user.email}}</em></li>
                                 <li><a href="/account/order/">我的订单</a></li>
                                 <li><a href="/account/settings/">个人设置</a></li>
                                 <li><a href="/account/changepwd/">修改密码</a></li>
-{% if request.user.is_staff %}
+{% if user.is_staff %}
                                 <li><a href="/office/">管理中心</a></li>
 {% endif %}
                             </ul>
