初步完成前端 订单的提交
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/message/templates/message.htm
+++ b/message/templates/message.htm
@@ -1,5 +1,7 @@
 {% extends request.session.msg.extendsHtm %}
 
+{% block title %}信息提示{% endblock %}
+
 {% block content %}
     <div class="pWhite">
 {% if messages %}
