--- a/cart/templates/checkout.htm
+++ b/cart/templates/checkout.htm
@@ -26,23 +26,23 @@
                 </tr>
 {% if cart.itemBuy %}
 {% for i in cart.itemBuy %}
-                    <tr align="center">
-                        <td>{{ i.item.item.name }}</td>
-                        <td>{{ i.item.spec }}</td>
-                        <td>￥{{ i.amount|floatformat:2 }} 元</td>
-                        <td>{{ i.num }}</td>
-                        <td>￥<span class="st{{ i.v }}">{{ i.subtotal|floatformat:2 }}</span> 元</td>
-                    </tr>
+                <tr align="center">
+                    <td>{{ i.item.item.name }}</td>
+                    <td>{{ i.item.spec }}</td>
+                    <td>￥{{ i.amount|floatformat:2 }} 元</td>
+                    <td>{{ i.num }}</td>
+                    <td>￥<span class="st{{ i.v }}">{{ i.subtotal|floatformat:2 }}</span> 元</td>
+                </tr>
 {% endfor %}
-                    <tr class="bLine">
-                        <td align="right" colspan="5"><span class="fBold font18">商品总价: ￥<span class="total">{{ cart.countFee|floatformat:2 }}</span> 元 和 0 K金</span></td>
-                        <td></td>
-                    </tr>
 {% else %}
-                    <tr class="bLine">
-                        <td align="center" colspan="6">您的购物车是空的</td>
-                    </tr>
+                <tr align="center">
+                    <td colspan="6">无</td>
+                </tr>
 {% endif %}
+                <tr class="bLine">
+                    <td align="right" colspan="5"><span class="fBold font18">商品总价: ￥<span class="total">{{ cart.countFee|floatformat:2 }}</span> 元 和 0 K金</span></td>
+                    <td></td>
+                </tr>
             </table>
             <h3>赠送</h3>
             <table width="100%" class="mBottom10">
@@ -53,15 +53,11 @@
                     <th>数量</th>
                     <th>小计</th>
                 </tr>
-                <tr align="center" class="bLine">
-                    <td>生日套装(生日牌/冷烟花/蜡烛)</td>
-                    <td>套</td>
-                    <td>￥3.00 元</td>
-                    <td>1</td>
-                    <td>￥3.00 元</td>
+                <tr align="center">
+                    <td colspan="6">无</td>
                 </tr>
-                <tr>
-                    <td colspan="5" align="right"><span class="fBold font18">总计: ￥287.00 元和0 K金</span></td>
+                <tr class="bLine">
+                    <td colspan="5" align="right"><span class="fBold font18">总计: ￥0.00 元和0 K金</span></td>
                 </tr>
             </table>
             <h3>收货人信息&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/cart/consignee/" class="btnB sBtn">修改</a></h3>
