--- a/office/static/office/css/style.css
+++ b/office/static/office/css/style.css
@@ -284,8 +284,6 @@ a.button:active{
   background:#CFC;
 }
 
-
-
 #content table td{
   background:#FFFFFF;
   line-height:22px;
@@ -388,6 +386,10 @@ a.button:active{
   border-bottom:2px solid #278296;
   background:#DDEEF2;
 }
+
+#content .pWhite{background-color:#FFFFFF;border:1px solid #d9d9d9;padding:35px;color:#000}
+#content .pWhite h3{font-family:'Microsoft Yahei';padding:10px 0;}
+#content .pWhite p{line-height:30px;}
 
 /* content: End */
 
