--- a/office/templates/office.htm
+++ b/office/templates/office.htm
@@ -1,7 +1,6 @@
 {% extends "office.base.htm" %}
 
-{% block title %}new31 管理系统{% endblock %}
-
+{% block title %}管理中心{% endblock %}
 
 {% block content %}
       <table cellpadding="3" cellspacing="1" width="100%">
